T.o.M.E 2.3.9 (ah)

Game:

- "Far reaching attack" now works for *all* polearms.
- Fixes and tweaks for Thaumaturgy to make view/area spells less
  overpowered and to make bolt/ball spells more useful. (Credit
  goes to Lord Estraven.)

T.o.M.E 2.3.8 (ah)

Game:

- Fix duration display for the Shapeshift Mimicry power. Thanks
  to morchant for the fix.
- Fix for creating "inventory" and "equipment" rules from the
  Automatizer UI. Thanks to morchant for the fix.
- Fix for Lua code which should hopefully get things working better
  for OpenBSD users. Thanks to Kernigh for the patch.
- Change "molten glass wall" to use a different internal code to
  hopefully avoid clashes with modules such as Theme.
- Removed the check on low fuel on your light source when traveling.
  It doesn't make sense since you can already travel without any light
  equipped.

Build System:

- Added support for building the GTK2 interface; only lightly tested.
- Added support for building on Windows with MinGW. Thanks to wino45
  for help with this.
- Miscellaneous fixes to the CMake files. Thanks to Kernigh for
  contributing these.

T.o.M.E 2.3.7 (ah)

- Remove item pval from antimagic field strength calculation since it
  may be both non-zero and invisible (to the player).
- Miscellaneous 64 bit fixes.
- Fix Lua errors when hitting <ESC> while choosing spell.
- Killerbunnies: Automatizer: Add patch which adds new <inventory/>
  and <equipment/> rules.
- Killerbunnies: Add "you do not know all your fate" to Fate menu
  if you haven't been discovered all your fates.
- Killerbunnies: Display a message if trying to activate Piercing Shots
  without the necessary skill levels.

T.o.M.E 2.3.6 (ah)

- Don't generate impassable glass walls.
- Mark *all* quest monsters properly.
- Avoid generating up staircases in selected dungeons.
- Mimicry cloaks of Abomination now aggravate properly.
- Properly handle item set effects with certain traps.
- Fix crash bug during character dumps.