@@ -796,81 +796,6 @@ static void regen_monsters(void)
 
 
 /*
- * Forcibly pseudo-identify an object in the inventory
- * (or on the floor)
- */
-bool psychometry(void)
-{
-	int item;
-
-	object_type *o_ptr;
-
-	char o_name[80];
-
-	byte feel;
-
-	cptr q, s;
-
-
-	/* Get an item */
-	q = "Meditate on which item? ";
-	s = "You have nothing appropriate.";
-	if (!get_item(&item, q, s, (USE_EQUIP | USE_INVEN | USE_FLOOR))) return (FALSE);
-
-	/* Get the item (in the pack) */
-	if (item >= 0)
-	{
-		o_ptr = &p_ptr->inventory[item];
-	}
-
-	/* Get the item (on the floor) */
-	else
-	{
-		o_ptr = &o_list[0 - item];
-	}
-
-	/* It is fully known, no information needed */
-	if ((object_known_p(o_ptr)) || (o_ptr->ident & IDENT_SENSE))
-	{
-		msg_print("You cannot find out anything more about that.");
-		return (TRUE);
-	}
-
-	/* Check for a feeling */
-	feel = value_check_aux1_magic(o_ptr);
-	if (feel == SENSE_NONE) feel = value_check_aux1(o_ptr);
-
-	/* Get an object description */
-	object_desc(o_name, o_ptr, FALSE, 0);
-
-	/* Skip non-feelings */
-	if (!feel)
-	{
-		msg_format("You do not perceive anything unusual about the %s.", o_name);
-		return (TRUE);
-	}
-
-	msg_format("You feel that the %s %s %s...",
-	           o_name, ((o_ptr->number == 1) ? "is" : "are"), sense_desc[feel]);
-
-	/* We have "felt" it */
-	o_ptr->ident |= (IDENT_SENSE);
-
-	/* Set sense property */
-	o_ptr->sense = feel;
-
-	/* Combine / Reorder the pack (later) */
-	p_ptr->notice |= (PN_COMBINE | PN_REORDER);
-
-	/* Window stuff */
-	p_ptr->window |= (PW_INVEN | PW_EQUIP | PW_PLAYER);
-
-	/* Something happened */
-	return (TRUE);
-}
-
-
-/*
  * Does an object decay?
  *
  * Should belong to object1.c, renamed to object_decays() -- pelpel
