@@ -880,7 +880,6 @@ extern byte value_check_aux2(object_type *o_ptr);
 extern byte value_check_aux2_magic(object_type *o_ptr);
 extern void play_game(bool new_game);
 extern void sense_inventory();
-extern bool psychometry(void);
 
 /* files.c */
 extern void html_screenshot(cptr name);
