@@ -2,6 +2,9 @@ T.o.M.E 2.3.9 (ah)
 
 Game:
 
+- Psycometry now always Identifies. It didn't make sense to
+  have a "forced pseudo-ID" since items are now always instantly
+  pseudo-ID'd.
 - "Far reaching attack" now works for *all* polearms.
 - Fixes and tweaks for Thaumaturgy to make view/area spells less
   overpowered and to make bolt/ball spells more useful. (Credit
